--- a/Mini-Challenge_1.ipynb
+++ b/Mini-Challenge_1.ipynb
@@ -847,7 +847,8 @@
    "source": [
     "### 3.2 Model 2\n",
     "\n",
-    "Als nächstes Model nehmen wir die gleichen Parameter, ausser mit einer Batchgrösse von 64. Vielleicht können wir unterschiede erkennen:\n",
+    "Als nächstes Model nehmen wir die gleichen Parameter, ausser mit einer Batchgrösse von 64. Wir erwarten, dass wir eine längere Trainingszeit haben. Die Metriken sollten praktisch gleiche Resultate aufweisen (leichte Unterschiede wegen der fehlenden Fehlerabschätzung möglich):\n",
+    "\n",
     "- Anzahl Worker = 8\n",
     "- Batchgrösse = 64\n",
     "- Epochen = 10\n",
@@ -936,8 +937,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Die Grafik zeigt ein sehr ähnliches Bild wie das mit einer Batchgrösse von 32. Auch hier sehen wir noch Potenzial mit mehr Epochen.\n",
-    "\n"
+    "Die Grafik zeigt ein sehr ähnliches Bild wie das mit einer Batchgrösse von 32. Dies war auch so zu erwarten. Die Trainingszeit ist interessanterweise nicht länger geworden. Das liegt auch wohl daran, weil wir beobachten konnten, dass auch hier die Grafikkarte nicht vollständig ausgelastet war"
    ]
   },
   {
@@ -1034,7 +1034,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Dieses Modell zeigt die gleichen Tücken auf wie das erste Modell. Der F1 Score liegt jetzt sogar unter 0.4. In Zukunft bleiben wir lieber mit einer Batchgrösse von 32.\n"
+    "Dieses Modell zeigt die gleichen Tücken auf wie das erste Modell. Dies war ebenfalls zu erwarten.\n"
    ]
   },
   {
@@ -1046,7 +1046,7 @@
    "source": [
     "### 3.3 Model 3\n",
     "\n",
-    "Das Trainieren geht sehr lange, aber doch würde es uns interessieren wie das Modell sich entwickelt, wenn wir noch mehr Durchläufe (Epochen) abspielen. Wir nehmen uns die Zeit und machen 20 Epochen:\n",
+    "Das Trainieren geht sehr lange, aber doch würde es uns interessieren wie das Modell sich entwickelt, wenn wir noch mehr Durchläufe (Epochen) abspielen. Wir nehmen uns die Zeit und machen 20 Epochen. Wir erwarten, dass wir dadurch die Genauigkeit des Models auf den Trainings-Datensatz steigern, aber wir ein Risiko eingehen, das wir es zu Overfitten:\n",
     "- Anzahl Worker = 8\n",
     "- Batchgrösse = 32\n",
     "- Epochen = 20\n",
@@ -1145,7 +1145,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Mit mehr Epochen wird der Loss kleiner und Accuracy steigt. Zwar distanzieren sich Train und Validation mehr mit jeder weiteren Epoche, aber die Resultate werden besser."
+    "Mit mehr Epochen wird der Loss kleiner und Accuracy steigt. Zwar distanzieren sich Train und Validation mehr mit jeder weiteren Epoche, aber die Resultate werden besser. Das Modell wurde nicht so stark overfittet wie wir es erwartet hätten."
    ]
   },
   {
@@ -1242,7 +1242,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Mehr Epochen haben echt was gebracht. Bei der Confusion Matrix sehen wir, dass wir nicht mehr so viele Hunde falsch vorhergesagt werden. Auch der F1 Score hat sich deutlich verbessert."
+    "Mehr Epochen haben echt was gebracht. Bei der Confusion Matrix sehen wir, dass wir nicht mehr so viele Hunde falsch vorhergesagt werden. Auch der F1 Score hat sich deutlich verbessert. Die Resultate sollten aber immer mit Vorsicht genossen werden, weil wir aus zeitlichen Gründen keine Fehlerabschätzung (zum Beispiel durch Cross-Validation) vorgenommen haben."
    ]
   },
   {
@@ -1254,7 +1254,7 @@
    "source": [
     "### 3.4 Model 4\n",
     "\n",
-    "Als nächstes Modell würden wir vorallem mit dem Learningrate spielen. statt eine Learningrate von 0.001 nehmen wir 0.01. Mal schauen wie sich das Modell dementsprechend ändern. Die Anzahl Epochen ändern wir wieder auf 10, damit wir es direkter vergleichen können mit d em ersten Modell:\n",
+    "Als nächstes Modell würden wir vorallem mit dem Learningrate spielen. statt eine Learningrate von 0.001 nehmen wir 0.01. Mal schauen wie sich das Modell dementsprechend ändern. Die Anzahl Epochen ändern wir wieder auf 10, damit wir es direkter vergleichen können mit dem ersten Modell. Wenn wir einen zu tiefen Learningrate haben, wird das Training sehr langsam voranschreiten, da die Gewichtungen im Netzwerk nur sehr geringfügig aktualisiert werden. Dies wollen wir nicht und erhöhen die Learningrate, Bei einem zu hohen Wert kann dies zu einem unerwünschten abweichenden Verhalten der Loss führen:\n",
     "- Anzahl Worker = 8\n",
     "- Batchgrösse = 32\n",
     "- Epochen = 10\n",
@@ -1343,7 +1343,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Wir sehen das durch einen Learningrate von 0.01 zwar besser Resultate erzielt werden, aber es sieht so aus als wäre der Learningrate für den Validationloss zu gross."
+    "Wir sehen das durch einen Learningrate von 0.01 mit 10 Epochen zu einem besseren Resultat mit den Trainingsdatensatz kommen. Dies war zu erwarten, weil wir stärker die «Weights» aktualisieren. Leider Overfitten wir dadurch zu schnell unser Model auf das Train-Datensatz und der Validationloss sinkt bereits nach 3 Epochen nicht mehr."
    ]
   },
   {
@@ -1429,7 +1429,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Mit dem Test-Datensatz bekommen wir bessere Werte in den Metriken mit einem Learningrate von 0.01. Dies würden wir im Hinterkopf behalten und später wieder draufzukommen"
+    "Auch auf den Testdatensatz sehen wir grossen Veränderungen bei den Metriken. eine leichte Verbesserung ist dennoch zu erkennen."
    ]
   },
   {
@@ -1441,7 +1441,7 @@
    "source": [
     "### 3.5 Model 5\n",
     "\n",
-    "Wir können vielleicht bessere Ergebnisse erzielen mit einem anderen Netzwerk? Wie wäre es, wenn wir die Parameter unseres ersten Modells beibehalten aber die Architektur des Modells von AlexNet nehmen. Damit dieses Network erhöhen wir Grösse der Input-Bilder auf 224x224. Die Parameter sind folgende:\n",
+    "Wir können vielleicht bessere Ergebnisse erzielen mit einem anderen Netzwerk? Wie wäre es, wenn wir die Parameter unseres ersten Modells beibehalten aber die Architektur des Modells von AlexNet übernehmen. Für dieses Netzwerk erhöhen wir die Grösse der Input-Bilder auf 224x224. Die Parameter sind folgende:\n",
     "- Anzahl Worker = 8\n",
     "- Batchgrösse = 32\n",
     "- Epochen = 10\n",
@@ -1568,7 +1568,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Das Alexnet performt bereits jetzt schon sehr gut. Der Loss der Training und Validation sind bereit nach 10 Epochen und 1.2."
+    "Das Alexnet performt sehr gut. Der Loss das Training und Validation sind bereit nach 10 Epochen unter 1.2. Wir sehen keine Anzeichen auf Overfitting. Mehr Epochen sollten hier bessere Resultate erzielen können."
    ]
   },
   {
@@ -1730,10 +1730,11 @@
     "Beobachtung\n",
     "\n",
     "Beim direkten Vergleich kann man schnell erkennen was die wichtigen Erkenntnisse daraus sind. Nochmals zusammengefasst können wir sagen:\n",
-    "- Batchsize 32 ist besser als Batchsize 64\n",
+    "\n",
     "- Mehr Epochen können kann helfen das Modell besser zu trainieren\n",
-    "- Learningrate von 0.1 performt besser als 0.001\n",
     "- AlexNet ist deutlich besser als unser Netzwerk\n",
+    "\n",
+    "Das eine Batchsize von 64 besser sein sollte als 32 und eine Learningrate von 0.001 besser sein sollte als 0.1 kann man nicht direkt aussagen. Die Unterschiede zwischen den Scores sind zu gering. (Um eine Aussage zu treffen, müsse man eine Fehlerabschätzung machen)\n",
     "\n",
     "    "
    ]
@@ -1807,7 +1808,8 @@
    "source": [
     "### 4.2.1 Model 6\n",
     "\n",
-    "Als erste Regularisierungen nehmen wir den L1. Die Parameter sind:\n",
+    "Als erste Regularisierungen nehmen wir den L1. Wir erwarten, dass Train- und Valid-loss näher beieinander liegen und nicht auseinander gehen.\n",
+    "Die Parameter sind:\n",
     "- Anzahl Worker = 8\n",
     "- Batchgrösse = 32\n",
     "- Epochen = 10\n",
@@ -1897,7 +1899,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Die Lossfunktion mit der L1 Regularisierung zeigt kaum Veränderungen auf den ersten Blick im Vergleich mit dem ersten Modell mit den gleichen Parameter ohne Regularisierung."
+    "Die Lossfunktion mit der L1 Regularisierung zeigt kaum Veränderungen auf den ersten Blick im Vergleich mit dem ersten Modell mit den gleichen Parameter ohne Regularisierung. Dennoch sehen wir schon, dass die beiden Train und Valid-Loss sehr parallel zusammen verlaufen."
    ]
   },
   {
@@ -1994,7 +1996,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Auch hier sieht man immer noch die Schwierigkeit beim Erkennen der Klasse der Hunde. Der F1 Score ist aber mit der Regularisierung tatsächlich ein kleines Stück besser"
+    "Auch hier sieht man immer noch die Schwierigkeit beim Erkennen der Klasse der Hunde. Der F1 Score ist aber mit der Regularisierung tatsächlich ein kleines Stück besser."
    ]
   },
   {
@@ -2624,6 +2626,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ddf70b51-b2e3-47d2-a2b9-b994f5cc36d1",
+   "metadata": {},
+   "source": [
+    "Zusammengefasst aller Regularisierungen können wir sagen. Das wir tatsächlich eine Verbesserung durch die Regularisierung auf unserem Testdatensatz sehen. Bei mehr Epochen wären wahrscheinlich die Resultate eindeutiger. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff5e040e-0926-483e-ba06-470b73a79e8c",
    "metadata": {},
    "source": [
@@ -2657,7 +2667,7 @@
    "source": [
     "### 5.1.1 Model 10\n",
     "\n",
-    "Hier wird jetzt die Architektur des CNN's angepasst und die Batchnorm hinzugefügt.\n",
+    "Hier wird jetzt die Architektur des CNN's angepasst und die Batchnorm hinzugefügt. Hier erwarten wir, dass wir generell bessere Resultate erzielen (bei Train und auch Valid). \n",
     "Die Parameter bleiben weiterhin unverändert:\n",
     "    \n",
     "- Anzahl Worker = 8\n",
@@ -2877,7 +2887,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Hier bei den Metriken sieht man, dass der Batchnorm doch was gebracht hat. wir konnten unser F1 Score steigern"
+    "Hier bei den Metriken sieht man, dass der Batchnorm doch was gebracht hat. wir konnten unser F1 Score steigern. Unsere Erwartungen konnten wir bestätigen."
    ]
   },
   {
@@ -2937,6 +2947,7 @@
     "\n",
     "Dieses Modell wirt mid Adam optimiert statt mit SGD wie die anderen Modelle oben dran.\n",
     "Diese Modell ist noch nicht regularisiert.\n",
+    "Bei diesem Modell erwarten wir vor allem kürzere Trainingszeiten haben. Dies würde uns sehr helfen. Zudem erwarten wir auch beim Traindatensatz in erster Linie bessere Resultate.\n",
     "Die Parameter bleiben weiterhin unverändert:\n",
     "    \n",
     "- Anzahl Worker = 8\n",
@@ -3028,7 +3039,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Adam Optimizer ist sehr stark. Das erkennen wir am schnellen Sinken der Loss und das Steigen der Accuracy. Hier fehlt klar die Regularisierung. Das Modell wird zu Overgefittet."
+    "Adam Optimizer ist sehr stark. Das erkennen wir am schnellen Sinken der Loss und das Steigen der Accuracy. Hier fehlt klar die Regularisierung. Das Modell wird zu Overgefittet. Zeitlich konnten wir leider keine Verbesserung feststellen."
    ]
   },
   {
@@ -3137,7 +3148,7 @@
    "source": [
     "### 6.1.2 Model 12\n",
     "\n",
-    "Hier kommt jetzt noch mal ein Modell mit de mAdam Optimizer. Diese mal werden wir eine L2 regularisierung einführen\n",
+    "Hier kommt jetzt noch mal ein Modell mit dem Adam Optimizer. Diese mal werden wir eine L2 regularisierung einführen\n",
     "Die Parameter bleiben weiterhin unverändert:\n",
     "    \n",
     "- Anzahl Worker = 8\n",
@@ -3229,7 +3240,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Eine gute Abhilfe gegen das Overfitten verschafft und die Regularisierung. Diese Grafiken zeigen einen pralleren verlauf der Werte mit der L2 Regularisierung."
+    "Eine gute Abhilfe gegen das Overfitten verschafft uns die Regularisierung. Diese Grafiken zeigen einen pralleren Verlauf der Werte mit der L2 Regularisierung."
    ]
   },
   {
@@ -3326,7 +3337,7 @@
    "source": [
     "Beobachtung:\n",
     "\n",
-    "Trotz Regularisierung konnten wir auf den ersten Anhieb keine grossen Änderung der Metriken erkennen. Villeicht brauchen wir ja mal viele Epochen."
+    "Trotz Regularisierung konnten wir auf den ersten Anhieb keine grossen Änderung der Metriken erkennen. Villeicht brauchen wir ja mehr Epochen."
    ]
   },
   {
@@ -3858,14 +3869,6 @@
     "\n",
     "Das beste Modell war trotz allem immer noch das AlexNet, auch wenn die Trainingszeit minim länger war. Wir können daraus schliessen, dass das gewählte oder erstellte Netzwerk den stärksten Einfluss hat wie das Modell am Schluss performt. Regularisierungen und Normalisierungen bringen klar auch seine Vorteile und verbessern das Modell. Dies können wir ebenfalls bestätigen."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "509e9b2d-d3da-4c7f-87c9-3b74a1a00c7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
